--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
 }
 #title{
     /* background-image: url(/img/banner.jpg); */
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(img/banner2.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../img/banner2.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
