--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     /* background-image: url(/img/banner.jpg); */
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(img/banner2.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/img/banner2.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
