--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body{
 
 /* Events */
 #events{
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(img/banner2.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../img/banner2.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
